# bonsai-trie-visualizer

./: .gitignore  Cargo.toml  PLAN.md  README.md  Trunk.toml  index.html  output.css
crates/api/: Cargo.toml
crates/api/src/: main.rs
crates/db-reader/: Cargo.toml
crates/db-reader/src/: lib.rs
crates/db-reader/src/bonsai/: diff_reader.rs  node.rs  path.rs  proof.rs  trie_reader.rs
crates/db-reader/src/db/: cf_map.rs  mod.rs
crates/frontend/: Cargo.toml
crates/frontend/src/: lib.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
src/: app.rs  main.rs
src/bonsai/: diff_reader.rs  mod.rs  proof.rs
src/db/: rocks.rs
src/model/: mod.rs  trie.rs
src/ui/: mod.rs
src/util/: hex.rs
