[package]
name = "bonsai-trie-visualizer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
eframe = "0.31"
egui = "0.31"
bitvec = "1"
image = "0.25"
parity-scale-codec = { version = "3.6", features = ["derive"] }
rocksdb = { version = "0.22", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
starknet-crypto = "0.7"
starknet-types-core = { version = "0.2.1", features = ["hash", "parity-scale-codec"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
