[workspace]
resolver = "2"
members = [
  "crates/api",
  "crates/frontend",
  "crates/db-reader",
  "crates/types",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
leptos = { version = "0.7", features = ["csr"] }
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
bitvec = "1"
parity-scale-codec = { version = "3.7", features = ["derive"] }
rocksdb = { version = "0.22", default-features = false }
starknet-crypto = "0.7"
starknet-types-core = { version = "0.2.4", features = ["hash", "parity-scale-codec"] }
image = "0.25"
