[package]
name = "bonsai-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
tower-http.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
clap.workspace = true
bonsai-db-reader = { path = "../db-reader" }
bonsai-types = { path = "../types" }

