[package]
name = "bonsai-frontend"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos.workspace = true
serde.workspace = true
serde_json.workspace = true
bonsai-types = { path = "../types" }
wasm-bindgen-futures = "0.4"
gloo-net = { version = "0.5", features = ["http"] }
gloo-timers = { version = "0.3", features = ["futures"] }

urlencoding = "2"
wasm-bindgen = "0.2"
